# mailstrom

./: Cargo.toml  README.md  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Drop.js
implementors/mailstrom/: trait.MailstromStorage.js
implementors/std/error/: trait.Error.js
mailstrom/: Mailstrom.t.html  MailstromStorageError.t.html  enum.WorkerStatus.html  index.html  sidebar-items.js  struct.Config.html  struct.Mailstrom.html  struct.MemoryStorage.html  trait.MailstromStorage.html  trait.MailstromStorageError.html
mailstrom/error/: enum.Error.html  index.html
mailstrom/internal_status/: InternalStatus.t.html  index.html  sidebar-items.js  struct.InternalStatus.html  struct.Recipient.html
mailstrom/status/: DeliveryResult.t.html  RecipientStatus.t.html  enum.DeliveryResult.html  index.html  sidebar-items.js  struct.RecipientStatus.html  struct.Status.html
mailstrom/storage/: MailstromStorage.t.html  trait.MailstromStorage.html  trait.MailstromStorageError.html
mailstrom/storage/memory_storage/: struct.MemoryStorage.html
mailstrom/worker/: WorkerStatus.t.html  enum.WorkerStatus.html
src/: config.rs  delivery_result.rs  email.rs  error.rs  internal_message_status.rs  internal_status.rs  lib.rs  message_status.rs  prepared_email.rs  recipient_status.rs  status.rs  tests.rs
src/mailstrom/: error.rs.html  internal_status.rs.html  lib.rs.html  status.rs.html
src/mailstrom/storage/: memory_storage.rs.html  mod.rs.html
src/mailstrom/worker/: delivery.rs.html  mod.rs.html  mx.rs.html  smtp.rs.html  task.rs.html
src/storage/: memory_storage.rs  mod.rs
src/worker/: delivery.rs  mod.rs  mx.rs  smtp.rs  task.rs
