[package]
name = "mailstrom"
version = "0.4.0"
description = "Email sender"
authors = ["Mike Dilger <mike@optcomp.nz>"]
readme = "README.md"
repository = "https://github.com/mikedilger/mailstrom"
documentation = "https://mikedilger.github.io/mailstrom"
license = "MIT OR Apache-2.0"
keywords = [ "email" ]

[dev-dependencies]
env_logger = "0.3"

[dependencies]
uuid = { version = "0.4", features = [ "v4" ] }
email-format = { version = "0.6", features = [ "lettre" ] }
trust-dns-resolver="0.9"
lettre = "0.7"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
native-tls = "0.1"
