[package]
name = "mailstrom"
version = "0.7.0-unstable"
description = "Email sender"
authors = ["Mike Dilger <mike@optcomp.nz>"]
readme = "README.md"
repository = "https://github.com/mikedilger/mailstrom"
documentation = "https://docs.rs/mailstrom"
license = "MIT OR Apache-2.0"
keywords = [ "email" ]
edition = "2018"

[dev-dependencies]
env_logger = "0.3"

[dependencies]
uuid = { version = "0.4", features = [ "v4" ] }
email-format = { version = "0.7", features = [ "lettre", "failure" ] }
trust-dns-resolver= { version = "0.10", features = [ "serde-config" ] }
lettre = "0.9"
failure = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
native-tls = "0.2"
toml = "0.5"
